infra/kubernetes/vps/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ee-frontend
  namespace: ee
  labels:
    app: ee-frontend
spec:
  selector:
    app: ee-frontend
  ports:
    - name: http
      port: 80
      targetPort: 4000
