infra/kubernetes/vps/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ee
  namespace: ee
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http01
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - ee.jonaskf.net
      secretName: ee-tls
  rules:
    - host: ee.jonaskf.net
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: ee-backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ee-frontend
                port:
                  number: 80
